fix z-index for toolbar

--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,7 @@ a.right {
 }
 
 #toolbar {
+	position: absolute;
     width:100%;
     height: 41px;
     background-color: #FFF;
